🐛 fix(validation): implement robust game start validation and UX (fixes #21)
<why>The previous game start logic had inconsistent validation and provided poor feedback to the user, often resulting in a generic error message
without explaining *why* the game could not be started. This led to confusion, especially when role counts did not match the number of
players.</why>
<how>
- Introduced a `ValidationState` struct in `game/room.go` to be the single source of truth for game start validation.
- The `GetValidationState` method now centralizes all checks (player count, role counts, leaderless rules, auto-scaling).
- Refactored the `StartGame` handler in `handlers/actions.go` to use `GetValidationState`.
- On validation failure, the `StartGame` handler now returns a user-friendly error message in an HTML fragment via SSE.
- The lobby SSE stream now pushes the `ValidationState` on connect and on any lobby change, ensuring the UI is always in sync.
- The "Start Game" button in `lobby.templ` is now driven by these signals, disabling itself and showing relevant error/help text.
- Added `CanAutoScale` logic to `RoleConfigService` to inform the user if the game can automatically adjust roles.
- Added comprehensive tests for the new validation logic in `room_validation_test.go`.
- Added new CSS in `output.css` to support the new validation display.
</how>

Centralizing validation in a single `GetValidationState` function that produces a comprehensive state object proved to be a very
effective pattern. It simplified the handlers and made the UI logic much more reliable and easier to reason about. Using SSE to push the entire
validation state, rather than just partial updates, prevents UI de-sync.

--- a/docs/PRD.org
+++ b/docs/PRD.org
@@ -201,6 +201,8 @@ The game progresses through clearly defined states:
 ** Phase 2: Enhanced Gameplay
 - [ ] Life counter integration (20 starting life)
 - [ ] Custom role configurations
+  - Ability to disable/enable roles from the "pool" of available roles.
+  - Ability to select the number of each role in the game.
 - [ ] Spectator mode
 - [ ] Game replay system
 - [ ] Chat/messaging system with role-based channels
